add_subdirectory(amc522)
add_subdirectory(Ansoulom)
add_subdirectory(cpp11nullptr)
add_subdirectory(dacap)
add_subdirectory(eviltwin)
add_subdirectory(FastSignals)
add_subdirectory(fr00b0)
add_subdirectory(i42output)
add_subdirectory(jeffomatic)


#add_subdirectory(joanrieu)
#add_subdirectory(Kosta-Github)
#add_subdirectory(larspensjo)
#add_subdirectory(miguelmartin)
#add_subdirectory(Montellese)
add_subdirectory(mwthinker)
#add_subdirectory(NoAvailableAlias)
#add_subdirectory(palacaze)
#add_subdirectory(pbhogan)
add_subdirectory(supergrover)
#add_subdirectory(vdksoft)
add_subdirectory(winglot)
#add_subdirectory(yassi)
